# SEO-Agents-App

./: .env.example  .gitignore  AIWA Demo Script  FRIDAY-RUNBOOK.md  PLAN.md  README.md  ecosystem.config.cjs  eslint.config.mjs  logs.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  veo3-test-result.json
.pi/: AGENTS.md
config/: action-completions.json  gbp-poster.config.json
knowledge/: website-structure.md
maverick-core-commercial/: DESIGN.md  index.html  meta.json  package.json
memory/: HANDOFF.md  JOURNAL.md
ops/: gbp-worker-launch.vbs  gbp-worker-task.xml
scripts/: facebook-comment-agent.mjs  facebook-insights-collector.mjs  facebook-insights-mcp.mjs  facebook-playwright-adapter.mjs  facebook-post-week.mjs  facebook-poster-adapter.mjs  facebook-poster.mjs  fb-fix-scheduled-photo.mjs  fb-photo-rewrite.mjs  gbp-photo-pick.mjs  gbp-profile-adapter.mjs  gbp-worker.mjs  gemini-video-generator.mjs  generate-reference-image.mjs  google-photos-sync.mjs  grizzly-photos-sync.gs  mav-bridge.mjs  photo-matcher.mjs  photo-scanner.mjs  reset-facebook-posted.mjs  reset-gbp-scheduled.mjs  run-weekly-seo.py  seo-monitor.mjs  setup-scheduled-tasks.ps1  supabase-sync.mjs  sync-photos-from-drive.mjs  verify-gbp-posts.mjs  verify-photo-ingestion.mjs  video-postprocess.mjs  wordpress-action-adapter.mjs  xai-video-generator.mjs
supabase/: schema.sql
tests/: conftest.py  phase4_fix.py  test_action_queue_lineage.py  test_claims_extract.py  test_claims_reference_validation.py  test_dispatch_gate.py  test_dry_run_offline.py  test_evidence_contracts.py  (+12 more)
(+64 files in other folders)
