[project]
name = "seo-agents"
version = "0.1.0"
description = "CrewAI-powered SEO research and planning agents."
requires-python = ">=3.12"
dependencies = [
  "crewai==1.14.5",
  "crewai-tools==1.14.5",
  "python-dotenv==1.2.2",
]

[project.scripts]
seo-agents = "seo_agents.main:main"

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"
